# edu-platform

./: README.md  main.py  pyproject.toml  settings.py
